Ajout du Syllabus sur la page d'accueil

--- a/index.html
+++ b/index.html
@@ -12,4 +12,7 @@ layout: default
 
 {{ site.description }}
 
+{% capture my_include %}{%  include syllabus.md %}{% endcapture %}
+{{ my_include | markdownify }}
+
 </div>
